--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "compilerOptions": {
-    "target": "ES5",
-    "lib": ["ES6"],
+    "target": "ES2022",
+    "lib": ["ES2022"],
+    "module": "ES2022",
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "strictNullChecks": true,
     "esModuleInterop": true,
-    "moduleResolution": "node",
+    "moduleResolution": "Bundler",
     "downlevelIteration": true,
     "outDir": "lib",
     "declaration": true,
