--- a/packages/bolt-connection/package.json
+++ b/packages/bolt-connection/package.json
@@ -2,7 +2,8 @@
   "name": "neo4j-driver-bolt-connection",
   "version": "5.0.0-dev",
   "description": "Implements the connection with the Neo4j Database using the Bolt Protocol",
-  "main": "lib/index.js",
+  "type": "module",
+  "module": "lib/index.js",
   "types": "types/index.d.ts",
   "scripts": {
     "build": "tsc",
@@ -36,7 +37,7 @@
     "jest": "^29.6.2",
     "lolex": "^6.0.0",
     "ts-jest": "^29.1.1",
-    "typescript": "^4.9.5"
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "buffer": "^6.0.3",
