--- a/packages/neo4j-driver-lite/package.json
+++ b/packages/neo4j-driver-lite/package.json
@@ -2,7 +2,8 @@
   "name": "neo4j-driver-lite",
   "version": "5.0.0-dev",
   "description": "The official Neo4j lite driver for Javascript",
-  "main": "lib/index.js",
+  "type": "module",
+  "module": "lib/index.js",
   "types": "types/index.d.ts",
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
@@ -56,7 +57,7 @@
     "testcontainers": "^8.16.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5",
+    "typescript": "^5.3.3",
     "uglify-js": "^3.17.4",
     "ws": "^8.14.2"
   },
